[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/GameManager_easy.gd" type="Script" id=1]
[ext_resource path="res://sprites/tela facil.png" type="Texture" id=2]
[ext_resource path="res://sprites/caixa texto3.png" type="Texture" id=3]
[ext_resource path="res://scripts/Card.gd" type="Script" id=4]
[ext_resource path="res://sprites/versocartas.png" type="Texture" id=5]
[ext_resource path="res://SFX/correct_1.wav" type="AudioStream" id=6]
[ext_resource path="res://SFX/menu_selection_1.wav" type="AudioStream" id=7]
[ext_resource path="res://SFX/gmae.wav" type="AudioStream" id=8]
[ext_resource path="res://fonts/Quicksand-Bold.otf" type="DynamicFontData" id=9]
[ext_resource path="res://scripts/CardOneName.gd" type="Script" id=10]
[ext_resource path="res://scripts/CardTwoName.gd" type="Script" id=11]
[ext_resource path="res://sprites/botao voltar.png" type="Texture" id=12]
[ext_resource path="res://sprites/caixa texto1.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 251.689, 250.482 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 160
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("BackToMenuButton:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 0.65, 0.65 ), Vector2( 0.6, 0.6 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "parabens"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("parabens:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.631373, 0.772549, 0.0901961, 1 ), Color( 0, 0.658824, 0.513726, 1 ), Color( 0.921569, 0.4, 0.0313726, 1 ), Color( 0.396078, 0.176471, 0.52549, 1 ), Color( 0.631373, 0.772549, 0.0901961, 1 ) ]
}

[node name="GameManger_easy" type="Node2D"]
position = Vector2( 90, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 738.675, 46.5034, 334.932, 1225.86, 655.849, 992.841, 897.989 ],
"_edit_vertical_guides_": [ 1223.66, 27.5019, 26.5294, 326.337, 625.109, 925.059, 1227.27, 1226.47, 1521.18, 1524.9, 1775.35, 63.5672 ]
}

[node name="background" type="Sprite" parent="."]
position = Vector2( 783.39, 541.177 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )

[node name="fundo_texto" type="Sprite" parent="."]
position = Vector2( 245.248, 907.084 )
scale = Vector2( 0.500574, 0.500574 )
texture = ExtResource( 3 )

[node name="Card1" type="Area2D" parent="."]
position = Vector2( 1260, 324 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Card1"]
position = Vector2( 10, 10 )
scale = Vector2( 0.71, 0.71 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card1"]
shape = SubResource( 1 )

[node name="Card2" type="Area2D" parent="."]
position = Vector2( 1260, 614 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Card2"]
position = Vector2( 10, 7 )
scale = Vector2( 0.71, 0.71 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card2"]
shape = SubResource( 1 )

[node name="Card3" type="Area2D" parent="."]
position = Vector2( 1560, 614 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Card3"]
position = Vector2( 7, 7 )
scale = Vector2( 0.71, 0.71 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card3"]
shape = SubResource( 1 )

[node name="Card4" type="Area2D" parent="."]
position = Vector2( 960, 324 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Card4"]
position = Vector2( 7, 10 )
scale = Vector2( 0.71, 0.71 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card4"]
shape = SubResource( 1 )

[node name="Card5" type="Area2D" parent="."]
position = Vector2( 960, 614 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Card5"]
position = Vector2( 7, 7 )
scale = Vector2( 0.71, 0.71 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card5"]
shape = SubResource( 1 )

[node name="Card6" type="Area2D" parent="."]
position = Vector2( 60, 324 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Card6"]
position = Vector2( 10, 10 )
scale = Vector2( 0.71, 0.71 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card6"]
shape = SubResource( 1 )

[node name="Card7" type="Area2D" parent="."]
position = Vector2( 660, 324 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Card7"]
position = Vector2( 7, 10 )
scale = Vector2( 0.71, 0.71 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card7"]
shape = SubResource( 1 )

[node name="Card8" type="Area2D" parent="."]
position = Vector2( 660, 614 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Card8"]
position = Vector2( 7, 7 )
scale = Vector2( 0.71, 0.71 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card8"]
shape = SubResource( 1 )

[node name="Card9" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 1560, 324 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Card9"]
position = Vector2( 7, 10 )
scale = Vector2( 0.71, 0.71 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card9"]
shape = SubResource( 1 )

[node name="Card10" type="Area2D" parent="."]
position = Vector2( 360, 322.772 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Card10"]
position = Vector2( 10, 12 )
scale = Vector2( 0.71, 0.71 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card10"]
position = Vector2( 2, 3.246 )
scale = Vector2( 1, 1.01281 )
shape = SubResource( 1 )

[node name="Card11" type="Area2D" parent="."]
position = Vector2( 360, 614 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Card11"]
position = Vector2( 10, 7 )
scale = Vector2( 0.71, 0.71 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card11"]
shape = SubResource( 1 )

[node name="Card12" type="Area2D" parent="."]
position = Vector2( 60, 614 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Card12"]
position = Vector2( 10, 7 )
scale = Vector2( 0.71, 0.71 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card12"]
shape = SubResource( 1 )

[node name="correct_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0

[node name="Click_mouse" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0

[node name="you_win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0

[node name="CardOneName" type="RichTextLabel" parent="."]
modulate = Color( 0.470588, 0.470588, 0.470588, 1 )
margin_left = -29.9119
margin_top = 796.642
margin_right = 270.088
margin_bottom = 854.642
rect_scale = Vector2( 1.7, 1.7 )
custom_fonts/normal_font = SubResource( 2 )
text = "Carta 1"
script = ExtResource( 10 )

[node name="CardTwoName" type="RichTextLabel" parent="."]
modulate = Color( 0.470588, 0.470588, 0.470588, 1 )
margin_left = -29.6539
margin_top = 858.564
margin_right = 270.346
margin_bottom = 916.564
rect_scale = Vector2( 1.7, 1.7 )
custom_fonts/normal_font = SubResource( 3 )
text = "Carta 2"
script = ExtResource( 11 )

[node name="NumberOfMatches" type="RichTextLabel" parent="."]
modulate = Color( 0.470588, 0.470588, 0.470588, 1 )
margin_left = -31.2712
margin_top = 951.473
margin_right = 393.729
margin_bottom = 1009.47
rect_scale = Vector2( 1.7, 1.7 )
custom_fonts/normal_font = SubResource( 3 )
text = "NÃºmero de Acertos: 0"

[node name="BackToMenuButton" type="Button" parent="."]
margin_left = 1448.85
margin_top = 927.619
margin_right = 1860.85
margin_bottom = 1049.62
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = SubResource( 4 )
icon = ExtResource( 12 )
flat = true

[node name="win_color" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.901961 )
position = Vector2( 804.111, 791.918 )
scale = Vector2( 2.02343, 2.68752 )
texture = ExtResource( 13 )

[node name="winning_fireworks" type="CPUParticles2D" parent="."]
position = Vector2( 758.858, 469.769 )
amount = 100
lifetime = 25.0
preprocess = 1.0
speed_scale = 5.0
explosiveness = 0.17
randomness = 0.39
spread = 142.71
flatness = 0.24
gravity = Vector2( 0, 0 )
initial_velocity = 101.0
initial_velocity_random = 0.1
angular_velocity = -288.0
angular_velocity_random = 0.36
linear_accel = 14.29
radial_accel = 14.29
scale_amount = 29.57
scale_amount_random = 0.56
color = Color( 0.156863, 1, 0.901961, 1 )
hue_variation = -1.0
hue_variation_random = 1.0

[node name="parabens" type="RichTextLabel" parent="."]
modulate = Color( 0.826641, 0.426661, 0.0810581, 1 )
margin_left = 425.349
margin_top = 365.094
margin_right = 1217.35
margin_bottom = 573.094
custom_fonts/normal_font = SubResource( 5 )
text = "ParabÃ©ns!"

[node name="button_animation" type="AnimationPlayer" parent="."]
anims/botao_voltar = SubResource( 6 )
anims/parabens = SubResource( 7 )

[connection signal="finished" from="Click_mouse" to="." method="_on_Click_mouse_finished"]
[connection signal="button_down" from="BackToMenuButton" to="." method="_on_BackToMenuButton_button_down"]
